--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,15 +6,15 @@
 #    driver-class-name: org.h2.Driver
 
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/bridge?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    username: bridge-project
-    password: 1234!
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/bridge?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#    username: root
+#    password: dusch0627
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         #       show_sql: true
