--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.30.1'
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+//	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
 //	testImplementation 'junit:junit:4.13.1'
 
 	compileOnly 'org.projectlombok:lombok'
