--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        #       show_sql: true
         format_sql: true
       show_sql: true
+    defer-datasource-initialization: true
 
 
 logging.level:
