--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,13 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
 	implementation 'com.mysql:mysql-connector-j'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.30.1'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 //	testImplementation 'junit:junit:4.13.1'
