--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-src/main/resources/application.yml
-src/test/resources/application.yml
+src/main/resources/*
+src/test/resources/*
 application.yml
 
 ### STS ###
