FEAT : 배포 관련 파일

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,12 +37,12 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Create application.yml
-        run: |
-          pwd
-          touch src/main/resources/application.yml
-          echo "${{ secrets.APPLICATION_YML }}" >> src/main/resources/application.yml
-          cat src/main/resources/application.yml
+#      - name: Create application.yml
+#        run: |
+#          pwd
+#          touch src/main/resources/application.yml
+#          echo "${{ secrets.APPLICATION_YML }}" >> src/main/resources/application.yml
+#          cat src/main/resources/application.yml
 
       - name: Build with Gradle
         run: ./gradlew build
