--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,10 @@ jobs:
         --ignore-hidden-files \
         --source .
 
-    - name: Code Deploy
-      run: aws deploy create-deployment 
+    - name: Deploy to AWS EC2 from S3
+      run: |
+        aws deploy create-deployment \
         --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
         --deployment-config-name CodeDeployDefault.AllAtOnce \
         --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-        --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$GITHUB_SHA.zip
+        --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
