--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,14 @@ jobs:
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew    
+
+    - name: Create application.yml
+      run: |
+        pwd
+        touch src/main/resources/application.yml
+        echo "${{ secrets.APPLICATION_YML }}" >> src/main/resources/application.yml
+        cat src/main/resources/application.yml
+        
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
