--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,10 @@ jobs:
 
     - name: Create application.yml
       run: |
-        touch ./src/main/resources/application.yml
-        echo "${{ secrets.APPLICATION_YML }}" >> ./src/main/resources/application.yml
-        cat ./src/main/resources/application.yml
+        cd ./src/main/resources
+        touch ./application.yml
+        echo "${{ secrets.APPLICATION_YML }}" >> ./application.yml
+        cat ./application.yml
         
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
